--- a/react-app/src/components/PostBar/PostBar.css
+++ b/react-app/src/components/PostBar/PostBar.css
@@ -6,6 +6,8 @@
     padding-bottom: 24px;
     width: 50vw;
     justify-items: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .post-image {
