--- a/react-app/src/components/NewPostForm/NewPostForm.css
+++ b/react-app/src/components/NewPostForm/NewPostForm.css
@@ -31,3 +31,15 @@
 .post-submit-button {
     width: 10%;
 }
+
+.modal-wrapper {
+    width: 45vw;
+    height: 60vh;
+    background-color: rgba(255, 255, 255, 1);
+    justify-content:center;
+    align-items: center;
+    position: fixed;
+    bottom: 100px;
+    right: 27%;
+    display: block
+}
