mvp 1 should be done except page doesn't refresh on delete

--- a/react-app/src/components/PostBar/PostBar.css
+++ b/react-app/src/components/PostBar/PostBar.css
@@ -33,5 +33,12 @@
     justify-content: flex-start;
     border: 1px solid black;
     height: 6vh;
+    width: 80%;
 
+}
+
+.post-bar-buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
