--- a/react-app/src/components/NewPostForm/NewPostForm.css
+++ b/react-app/src/components/NewPostForm/NewPostForm.css
@@ -33,13 +33,14 @@
 }
 
 .modal-wrapper {
-    width: 45vw;
+    width: 55vw;
     height: 60vh;
     background-color: rgba(255, 255, 255, 1);
     justify-content:center;
     align-items: center;
     position: fixed;
-    bottom: 100px;
-    right: 27%;
-    display: block
+    bottom: 25%;
+    right: 22.5%;
+    display: block;
+    border: 1px solid black
 }
