--- a/react-app/src/components/NewPostForm/NewPostForm.css
+++ b/react-app/src/components/NewPostForm/NewPostForm.css
@@ -34,13 +34,14 @@
 
 .modal-wrapper {
     width: 55vw;
-    height: 60vh;
+    height: 80%;
     background-color: rgba(255, 255, 255, 1);
     justify-content:center;
     align-items: center;
     position: fixed;
-    bottom: 25%;
+    top: 12%;
     right: 22.5%;
     display: block;
-    border: 1px solid black
+    border: 1px solid black;
+    overflow-y: auto
 }
