--- a/react-app/src/components/PostBar/PostBar.css
+++ b/react-app/src/components/PostBar/PostBar.css
@@ -21,6 +21,7 @@
     font-size: 24px;
     margin-block-start: 0;
     margin-block-end: 5px;
+    font-weight: bold;
 }
 .post-description {
     font-size: 17px;
@@ -31,7 +32,8 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    border: 1px solid black;
     height: 6vh;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 
 }
+
