--- a/react-app/src/components/PostDetailsPage/PostDetailsPage.css
+++ b/react-app/src/components/PostDetailsPage/PostDetailsPage.css
@@ -19,25 +19,35 @@
 .username-comment {
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
+    margin-left: 1%;
+    padding-top: 1%;
 }
 
 .username-tag {
     margin-top: 0;
     margin-bottom: 0;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .comment-input {
     margin-bottom: 2%;
+    margin-left: 2%;
 }
 
 .discussion-tag {
     padding-bottom: 3%;
+    padding-left: 2%;
+}
+
+.comment-tag {
+    font-size: 18px;
 }
 
 .username-comment-image {
     display: flex;
     flex-direction: row;
+    border-bottom: 1px solid black;
 }
 
 .comment-profile-pic {
@@ -45,4 +55,51 @@
     height: 95px;
     width: 100px;
     border: 1px solid black;
+}
+
+.dropdown-content {
+    display: none;
+}
+
+.dropdown:hover .dropdown-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.dropdown {
+    display: flex;
+    position: relative;
+    bottom: 195px;
+    margin-left: 95%;
+    width: 2%;
+}
+
+.dropdown:hover #dropdown-button {
+    display: none;
+}
+
+.post-bar-edit {
+    background-color: white;
+    border: solid 1px black
+}
+
+.modal-wrapper {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+.post-details-title {
+    padding-left: 2%;
+}
+
+.post-details-description {
+    padding-left: 5%;
+}
+
+.username-comment-image {
+    padding-left: 1%;
+}
+
+.comment-profile-pic-container {
+    padding-top: 1%;
+    padding-bottom: .5%;
 }
