--- a/react-app/src/components/EditPostForm/EditPostForm.css
+++ b/react-app/src/components/EditPostForm/EditPostForm.css
@@ -15,11 +15,12 @@
     justify-content:center;
     align-items: center;
     position: fixed;
-    top: 12%;
+    top: 20%;
     right: 27.5%;
     display: block;
-    border: 1px solid black;
+    border: 1px solid rgb(189, 195, 199);
     overflow-y: auto;
+    border-radius: 4px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -35,6 +36,7 @@
     margin-left: -20%;
     font-weight: bold;
     font-size: 17px;
+    border-radius: 8px;
 }
 
 .edit-post-cancel-button {
@@ -44,6 +46,7 @@
     margin-left: 20%;
     font-weight: bold;
     font-size: 17px;
+    border-radius: 8px;
 }
 
 .edit-comment-modal-2 {
