--- a/react-app/src/components/NewPostForm/NewPostForm.css
+++ b/react-app/src/components/NewPostForm/NewPostForm.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .form-container {
@@ -27,7 +28,9 @@
 
 }
 
-
+.post-submit-button {
+    width: 10%;
+}
 
 .modal-wrapper {
     width: 45vw;
