--- a/react-app/src/components/PostDetailsPage/PostDetailsPage.css
+++ b/react-app/src/components/PostDetailsPage/PostDetailsPage.css
@@ -98,8 +98,19 @@
     font-size: 17px;
 }
 
-.modal-wrapper {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+.modal-wrapper-details {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 55vw;
+    height: 80%;
+    background-color: rgba(255, 255, 255, 1);
+    justify-content:center;
+    align-items: center;
+    position: fixed;
+    top: 12%;
+    right: 22.5%;
+    display: block;
+    border: 1px solid rgb(189, 195, 199);
+    overflow-y: auto;
 }
 
 .post-details-title {
