--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -40,3 +40,35 @@
     background-size: cover;
     height: 100vh;
 }
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+    height: 3vh;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.github-linkedin {
+    display: flex;
+    align-items: flex-end;
+    width: 70%;
+    justify-content: space-around;
+    font-size: 25px;
+}
+
+.footer-text {
+    margin-bottom: 0;
+    margin-left: 10%;
+}
+
+.footer-link {
+    color: black;
+    text-decoration: none;
+}
+
+.footer-link:hover {
+    color: black;
+    text-decoration: underline;
+}
