--- a/react-app/src/components/auth/SignUpForm.css
+++ b/react-app/src/components/auth/SignUpForm.css
@@ -26,3 +26,21 @@
     align-items: center;
     margin-bottom: 5%;
 }
+
+.sign-up-form-submit {
+    background-color: orange;
+    color: white;
+    height: 200%;
+    font-weight: bold;
+    font-size: 17px;
+    border-radius: 8px;
+}
+
+.sign-up-form-demo-login {
+    background-color: orange;
+    color: white;
+    height: 200%;
+    font-weight: bold;
+    font-size: 17px;
+    border-radius: 8px;
+}
