--- a/react-app/src/components/PostDetailsPage/PostDetailsPage.css
+++ b/react-app/src/components/PostDetailsPage/PostDetailsPage.css
@@ -157,3 +157,15 @@
     flex-direction: column;
     margin-left: 5%;
 }
+
+.username-comment-image {
+    display: flex;
+    flex-direction: row;
+}
+
+.comment-profile-pic {
+    border-radius: 50%;
+    height: 95px;
+    width: 100px;
+    border: 1px solid black;
+}
