--- a/react-app/src/components/PostBar/PostBar.css
+++ b/react-app/src/components/PostBar/PostBar.css
@@ -12,8 +12,10 @@
 }
 
 .post-image {
-    height: 136%;
-    width: 20%;
+    min-height: 136%;
+    min-width: 20%;
+    max-height: 136%;
+    max-width: 20%;
     margin-right: 20px;
     margin-top: -24px;
     border-radius: 8px;
