--- a/react-app/src/components/PostBar/PostBar.css
+++ b/react-app/src/components/PostBar/PostBar.css
@@ -31,6 +31,7 @@
     font-size: 17px;
     margin-block-start: 0;
     margin-block-end: 0;
+    width: 30vw
 }
 .post-name-description-container {
     display: flex;
